@startuml

class Twitter  {
	+addUser(screenName: String): User
	+deleteUser(screenName: String): void
}

class User {
	-screenName: String
	+User(screenName: String)
	+getScreenName(): String
	+setScreenName(screenName: String): void
	+tweet(text: String): T_Tweet
	+getTweets(): List<T_Tweet>
	+retweet(tweet: T_Tweet): T_Tweet
}

Twitter "0..*" -->  User : users

User "0..*" --> T_Tweet : tweets
class Tweet {
	-text: String
	+Tweet(text: String)
	+getParent(): T_Tweet
	+getText(): String
}
interface T_Tweet {
}
T_Tweet <|.. Tweet


interface T_Tweet [[java:ar.edu.unlp.info.oo2.ejercicio1.T_Tweet]] {
	getText(): String
}
class T_Tweet {
}


class Retweet [[java:ar.edu.unlp.info.oo2.ejercicio1.Retweet]] {

	+Retweet(parent: T_Tweet)
	+getText(): String
	+getParent(): T_Tweet
}
interface T_Tweet {
}
T_Tweet <|.. Retweet
Retweet --> Tweet : parent
@enduml